Fix table wrap

--- a/public/application.css
+++ b/public/application.css
@@ -10934,12 +10934,11 @@ section.footer {
 .parenthese::after {
   content: ")"; }
 
-table {
-  border-spacing: 0; }
-
 .table {
   background-color: #FFF;
+  border-spacing: 0;
   max-width: 100%;
+  table-layout: fixed;
   width: 100%; }
   .table thead tr,
   .table tbody tr {
@@ -10955,11 +10954,26 @@ table {
       transition: all .3s ease;
       text-align: left;
       vertical-align: top; }
-      .table thead tr th.overflow,
-      .table thead tr td.overflow,
-      .table tbody tr th.overflow,
-      .table tbody tr td.overflow {
-        display: inline-block;
+      .table thead tr th.width-50,
+      .table thead tr td.width-50,
+      .table tbody tr th.width-50,
+      .table tbody tr td.width-50 {
+        width: 50%; }
+      .table thead tr th.width-5,
+      .table thead tr td.width-5,
+      .table tbody tr th.width-5,
+      .table tbody tr td.width-5 {
+        width: 5%; }
+      .table thead tr th.width-9,
+      .table thead tr td.width-9,
+      .table tbody tr th.width-9,
+      .table tbody tr td.width-9 {
+        width: 9%; }
+      .table thead tr th .overflow,
+      .table thead tr td .overflow,
+      .table tbody tr th .overflow,
+      .table tbody tr td .overflow {
+        display: block;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap; }
